<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:paddingHorizontal="25dp"
        android:paddingTop="25dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tvOppoPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/firstConstraint"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/tvOppoPay" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/ivBankCard"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/startDetect"
                android:textAlignment="center"
                android:textColor="#fff" />

            <ImageView
                android:id="@+id/ivTick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_with_tick"
                android:visibility="gone"
                android:paddingTop="20dp"
                android:paddingLeft="5dp"
                android:layout_toRightOf="@id/tvDescription"/>
        </RelativeLayout>

            <ImageView
                android:id="@+id/ivBankCard"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:paddingTop="10dp"
                android:contentDescription="@string/bank_card_image"
                android:src="@drawable/bankcard"
                app:layout_constraintBottom_toTopOf="@+id/bank_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/bank_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="ABC BANK \nLOOI YU HENG"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/firstConstraint">

            <TextView
                android:id="@+id/tvCardSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card Selection"
                android:textColor="#fff"
                android:textSize="@dimen/title_text_size"
                android:paddingBottom="10dp"/>

            <ImageButton
                android:id="@+id/ibSwapCard"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/swap_card"
                android:background="#000"
                android:paddingHorizontal="@dimen/icon_padding_horizontal"
                android:paddingVertical="@dimen/icon_padding_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCardSelection" />

            <ImageButton
                android:id="@+id/ibAddCard"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/add_card"
                android:background="#000"
                android:paddingHorizontal="@dimen/icon_padding_horizontal"
                android:paddingVertical="@dimen/icon_padding_vertical"
                app:layout_constraintTop_toBottomOf="@+id/tvCardSelection"
                app:layout_constraintLeft_toRightOf="@+id/ibSwapCard" />

            <TextView
                android:id="@+id/tvSwapCard"
                android:layout_width="@dimen/icon_width"
                android:layout_height="wrap_content"
                android:text="@string/swap_card"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="@dimen/icon_text_size"
                app:layout_constraintTop_toBottomOf="@+id/ibSwapCard" />

            <TextView
                android:layout_width="@dimen/icon_width"
                android:layout_height="wrap_content"
                android:text="@string/add_card"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="@dimen/icon_text_size"
                app:layout_constraintTop_toBottomOf="@+id/ibSwapCard"
                app:layout_constraintLeft_toRightOf="@+id/tvSwapCard" />

            <TextView
                android:id="@+id/tvPaymentOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Payment Option"
                android:textColor="#fff"
                android:textSize="@dimen/title_text_size"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSwapCard"/>

            <ImageButton
                android:id="@+id/ibScan"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/scan"
                android:background="#000"
                android:paddingHorizontal="@dimen/icon_padding_horizontal"
                android:paddingVertical="@dimen/icon_padding_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPaymentOption" />

            <ImageButton
                android:id="@+id/ibQrCode"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/qrcode"
                android:background="#000"
                android:paddingHorizontal="@dimen/icon_padding_horizontal"
                android:paddingVertical="@dimen/icon_padding_vertical"
                app:layout_constraintTop_toBottomOf="@+id/tvPaymentOption"
                app:layout_constraintLeft_toRightOf="@+id/ibScan"/>

            <ImageButton
                android:id="@+id/ibBank"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/bank"
                android:background="#000"
                android:paddingHorizontal="@dimen/icon_padding_horizontal"
                android:paddingVertical="@dimen/icon_padding_vertical"
                app:layout_constraintTop_toBottomOf="@+id/tvPaymentOption"
                app:layout_constraintLeft_toRightOf="@+id/ibQrCode"/>

            <TextView
                android:id="@+id/tvScan"
                android:layout_width="@dimen/icon_width"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="@dimen/icon_text_size"
                app:layout_constraintTop_toBottomOf="@+id/ibScan" />

            <TextView
                android:id="@+id/tvQrCode"
                android:layout_width="@dimen/icon_width"
                android:layout_height="wrap_content"
                android:text="@string/qrcode"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="@dimen/icon_text_size"
                app:layout_constraintTop_toBottomOf="@+id/ibScan"
                app:layout_constraintLeft_toRightOf="@+id/tvScan"/>

            <TextView
                android:layout_width="@dimen/icon_width"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="@dimen/icon_text_size"
                app:layout_constraintTop_toBottomOf="@+id/ibScan"
                app:layout_constraintLeft_toRightOf="@+id/tvQrCode"/>

            <TextView
                android:id="@+id/tvOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Report"
                android:textColor="#fff"
                android:textSize="@dimen/title_text_size"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/tvScan"/>

            <ImageButton
                android:id="@+id/ibReport"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/report"
                android:background="#000"
                android:paddingHorizontal="@dimen/icon_padding_horizontal"
                android:paddingVertical="@dimen/icon_padding_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOthers" />

            <TextView
                android:id="@+id/tvReport"
                android:layout_width="@dimen/icon_width"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="@dimen/icon_text_size"
                app:layout_constraintTop_toBottomOf="@+id/ibReport"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
